--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     position: absolute;
     bottom: 28px;
     left: 20px;
+
 }
 
 #container #dino img {
@@ -34,26 +35,34 @@ body {
 }
 
 .jumpDino {
-    animation: animateDino 500ms linear infinite;
+    animation: animateDino 600ms linear infinite;
 }
 
 @keyframes animateDino {
     0%,100%{
         bottom: 28px;
     }
-    45%,55%{
+    35%,45%{
         bottom: 160px
+    }
+
+    55%,65%{
+        bottom: 160px
+    }
+    
+    75%,85%{
+        bottom: 120px
     }
 
 }
 
 #container #cactosBig {
-    height: 80px;
-    width: 125px;
+    height: 80px; 
+    width: 110px;
     position: absolute;
     bottom: 20px;
-    right: -20px;
-   
+    right: -100px;
+
 }
 
 #container #cactosBig img {
@@ -62,7 +71,7 @@ body {
 }
 
 .movimentoCactusBig {
-    animation: animateCactusBig 1s linear infinite;
+    animation: animateCactusBig 3s linear infinite;
 }
 
 
@@ -78,39 +87,10 @@ body {
 
 }
 
-#container #passaro {
-    height: 200px;
-    width: 40px;
-    position: absolute;
-    bottom: 20px;
-    right: -20px;
-    
-}
-
-#container #passaro img {
-    height: 60px;
-    width: 60px;
-
-}
-
-.movimentoPassaro {
-    animation: animatePassaro 10s linear infinite;
-}
-
-@keyframes animatePassaro {
-    0% {
-        right: 125px;
-    }
-    100%
-    {
-        right: 100%
-    }
-
-}
 
 #container #terra {
     height: 30px;
-    width: 1200px;
+    width: 1500px;
     position: absolute;
     bottom: 0;
 }
@@ -133,7 +113,7 @@ body {
     }
 
     100% {
-        left: -800px;
+        left: -900px;
     }
 }
 
@@ -149,7 +129,7 @@ body {
     height: 100px;
     width: 2000px;
     position: absolute;
-    right: -2000px;
+
 
 }
 
